--- a/app/src/app.html
+++ b/app/src/app.html
@@ -8,5 +8,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+    <script type="module" src="https://unpkg.com/@googlemaps/extended-component-library"></script>
 	</body>
 </html>
