get google map lib specific version

--- a/app/src/app.html
+++ b/app/src/app.html
@@ -16,7 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Material+Icons&Roboto+Mono:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/@googlemaps/extended-component-library@0.6"
+    ></script>
 
     <link rel="stylesheet" href="https://unpkg.com/mobile-drag-drop/default.css" />
     <script src="https://unpkg.com/mobile-drag-drop/index.min.js"></script>
