change --color vars

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja" data-theme="lemonade">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -22,8 +22,8 @@
     ></script>
 
     <link rel="stylesheet" href="https://unpkg.com/mobile-drag-drop/default.css" />
-    <script src="https://unpkg.com/mobile-drag-drop/index.min.js"></script>
-    <script src="https://unpkg.com/mobile-drag-drop/scroll-behaviour.min.js"></script>
+    <script defer src="https://unpkg.com/mobile-drag-drop/index.min.js"></script>
+    <script defer src="https://unpkg.com/mobile-drag-drop/scroll-behaviour.min.js"></script>
     <script>
       const usePolyfill = MobileDragDrop.polyfill({
         dragImageTranslateOverride: MobileDragDrop.scrollBehaviourDragImageTranslateOverride
